manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sovannlyna-html-v17-deployment
  labels:
    app: sovannlyna-html-v17
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sovannlyna-html-v17
  template:
    metadata:
      labels:
        app: sovannlyna-html-v17
    spec:
      containers:
        - name: sovannlyna-html-v17-container
          image: pipejet/sovannlyna-html-v17:1
          ports:
            - containerPort: 80
